v5.1.0/_sources/generated/pcdsdevices.lasers.elliptec.EllBase.rst.txt
pcdsdevices.lasers.elliptec.EllBase
===================================

.. currentmodule:: pcdsdevices.lasers.elliptec

.. autoclass:: EllBase

    
    
    .. list-table:: Ophyd Device Components
        :header-rows: 1
        :widths: auto

        * - Attribute
          - Class
          - Suffix
          - Docs
          - Kind
          - Notes
    
        * - set_position (FCpt)
          - :class:`~ophyd.signal.EpicsSignal`
          - ``{prefix}:M{self._channel}:CURPOS``
          - 
          - normal
          - 
    
        * - jog_fwd (FCpt)
          - :class:`~ophyd.signal.EpicsSignal`
          - ``{prefix}:M{self._channel}:MOVE_FWD``
          - 
          - normal
          - 
    
        * - jog_bwd (FCpt)
          - :class:`~ophyd.signal.EpicsSignal`
          - ``{prefix}:M{self._channel}:MOVE_BWD``
          - 
          - normal
          - 
    
        * - status (FCpt)
          - :class:`~ophyd.signal.EpicsSignalRO`
          - ``{prefix}:M{self._channel}:STATUS``
          - 
          - normal
          - 
    
        * - optimize (FCpt)
          - :class:`~ophyd.signal.EpicsSignal`
          - ``{prefix}:M{self._channel}:OPTIMIZE``
          - 
          - omitted
          - 
    
        * - _from_addr (FCpt)
          - :class:`~ophyd.signal.EpicsSignal`
          - ``{prefix}:PORT{self._port}:FROM_ADDR``
          - 
          - omitted
          - 
    
        * - _to_addr (FCpt)
          - :class:`~ophyd.signal.EpicsSignal`
          - ``{prefix}:PORT{self._port}:TO_ADDR``
          - 
          - omitted
          - 
    
        * - _save (FCpt)
          - :class:`~ophyd.signal.EpicsSignal`
          - ``{prefix}:PORT{self._port}:SAVE``
          - 
          - omitted
          - 
    
        * - _command (FCpt)
          - :class:`~ophyd.signal.EpicsSignal`
          - ``{prefix}:PORT{self._port}:CMD``
          - 
          - omitted
          - 
    
        * - _response (FCpt)
          - :class:`~ophyd.signal.EpicsSignalRO`
          - ``{prefix}:PORT{self._port}:RESPONSE``
          - 
          - omitted
          - 
    

    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    
    

    
    

    
    
    .. rubric:: Methods

    
    .. automethod:: configure
    .. automethod:: describe
    .. automethod:: get
    .. automethod:: read
    .. automethod:: read_configuration
    .. automethod:: stop
    .. automethod:: summary
    .. automethod:: trigger
    
    

    
    
    .. rubric:: Attributes

    
    .. autoattribute:: configuration_attrs
    .. autoattribute:: connected
    .. autoattribute:: hints
    .. autoattribute:: kind
    
    